# trass-config

./: README.md  trass-config.cabal
