name:                trass-config
version:             0.1
synopsis:            Config management library for TRASS.
-- description:
homepage:            https://github.com/trass/trass-config
bug-reports:         https://github.com/trass/trass-config/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:
    Trass.Config.Options
    Trass.Config.Util
  default-extensions:
    OverloadedStrings
    FlexibleInstances
    RecordWildCards
  build-depends:      base          >=4.7   &&  <4.8
                    , containers
                    , unordered-containers
                    , text
                    , aeson         >=0.2

source-repository head
  type: git
  location: https://github.com/trass/trass-config.git
  branch: master
